@@ -4471,3 +4471,4 @@ Changelog for GXemul:
 		Fixing a bug in the MRU list in DyntransTranslationCache.
 		Fixing disassembly of tb0 and tb1, and implementing the
 		rest of the bcnd conditions.
+		Beginning on reimplementing MIPS (slow) loads/stores.
